HETS-221 - add EntityId to the model for the Audit
